# resultpy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/okresult/: __init__.py  error.py  result.py  safe.py
src/resultpy/: __init__.py  error.py  result.py  safe.py
tests/: test_error.py  test_laws.py  test_readme_examples.py  test_result.py  test_safe.py
