[project]
name = "resultpy"
version = "0.1.0"
description = "A lightweight Result type for Python."
authors = [{name = "Pedro Rocha", email = "pedro.diniz.rocha@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []
keywords = ["result", "monad", "error-handling", "type-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/dmmulroy/resultpy"
Repository = "https://github.com/dmmulroy/resultpy.git"
Issues = "https://github.com/dmmulroy/resultpy/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.7",
]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.pyright]
typeCheckingMode = "strict"
